test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/readonly-iterable.widl
interface ReadonlyIterable {
  readonly iterable<long>;
}